# mpdata

./: CMakeLists.txt  README  README.md  egu2012.cpp  egu2012.f  egu2012.py  test.py
paper/: CMakeLists.txt  README
paper/cpp/: CMakeLists.txt  inout.cpp  listing_00_prereq_blitz.hpp  listing_00_prereq_blitz.hpp.tex  listing_01.hpp  listing_01_prereq_declret.hpp  listing_01_prereq_declret.hpp.tex  listing_02_prereq_ptrvec.hpp  listing_02_prereq_ptrvec.hpp.tex  listing_03.hpp  listing_04.hpp  listing_05.hpp  listing_06.hpp  listing_07.hpp  listing_08.hpp  listing_09.hpp  listing_10.hpp  listing_11.hpp  listing_12.hpp  listing_13.hpp  listing_14.hpp  listing_15.hpp  listings.hpp  plot.cpp  test.cpp  test_mpdata.cpp
paper/doc/: code-cpp-listings.hpp.tex  code-cpp-plot.cpp.tex  code-for-listings.f.tex  code-for-test.f.tex  code-pyt-listings.py.tex  code-pyt-test.py.tex  formulae_A.tex  formulae_antidiff1.tex  formulae_donor-F.tex  formulae_donor.tex  formulae_pi.tex  grid.tex  make  paper.bib  paper.tex
paper/doc/formulae/: B.tex  adv.tex  all.tex  antidiff2.tex  pi.tex  preamble.tex
paper/f77/: CMakeLists.txt  test.f
paper/for/: CMakeLists.txt  listing_00.f  listing_01.f  listing_02.f  listing_03.f  listing_04.f  listing_05.f  listing_06.f  listings.f  test.f  test_arrvec.f
paper/pyt/: .gitignore  CMakeLists.txt  listings.c  listings.py  listings_zmianahalo.py  numba_mpdata_test.py  simple_test.py  test.c  test.py  testing.py  testing_numpy.py  testing_numpy_zmianahalo.py
paper/pyt/loops_comparison/: README  listings.py  listings_loops.py  listings_loops_cython.pyx  listings_loops_numba.py  setup.py  testdonorcell_pythononly.py
paper/pyt/numba/: donor_cycl_1D_noshift_noinheritance.py  listings_noslice.py  test_numba.py  test_pythononly.py
paper/tests/: CMakeLists.txt
paper/tests/sanity/: nx=3_ny=3_Cx=.2_Cy=.2_nt=1_it=3:out
paper/tests/timing/: filter.sh  filter0.awk  filter1.awk  filter2.awk  filter3.awk  inout.sh  nx=0032_ny=0032_Cx=.2_Cy=.5_nt=100_it=3:out  nx=0064_ny=0064_Cx=.2_Cy=.5_nt=100_it=3:in  nx=0064_ny=0064_Cx=.2_Cy=.5_nt=100_it=3:out  nx=0064_ny=0064_Cx=.2_Cy=.5_nt=4096_it=3:out  nx=0081_ny=0081_Cx=.2_Cy=.5_nt=2557_it=3:in  nx=0081_ny=0081_Cx=.2_Cy=.5_nt=2557_it=3:out  nx=0102_ny=0102_Cx=.2_Cy=.5_nt=1612_it=3:in  nx=0128_ny=0128_Cx=.2_Cy=.5_nt=100_it=3:in  nx=0128_ny=0128_Cx=.2_Cy=.5_nt=100_it=3:out  nx=0256_ny=0256_Cx=.2_Cy=.5_nt=100_it=3:out  nx=0512_ny=0512_Cx=.2_Cy=.5_nt=100_it=3:out  nx=128_ny=128_Cx=.2_Cy=.5_nt=100_it=3:out  nx=256_ny=256_Cx=.2_Cy=.5_nt=100_it=3:in  nx=256_ny=256_Cx=.2_Cy=.5_nt=100_it=3:out  nx=32_ny=32_Cx=.2_Cy=.5_nt=100_it=3:in  nx=512_ny=512_Cx=.2_Cy=.5_nt=100_it=3:in  nx=64_ny=64_Cx=.2_Cy=.5_nt=100_it=3:out  plot.gpi  result-20121116
poster/: CMakeLists.txt  Makefile  README  egu2012.cpp  egu2012.py  plot.py
