set(CMAKE_CXX_FLAGS_RELEASE "-std=c++0x -DNDEBUG -Wfatal-errors")
if(CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -ftree-vectorizer-verbose=1")
else()
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3") # e.g. clang++
endif()
set(CMAKE_CXX_FLAGS_DEBUG   "-std=c++0x -DBZ_DEBUG")

find_package(Boost COMPONENTS iostreams system REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
find_path(GNUPLOT-IOSTREAM_INCLUDE_DIR PATH_SUFFIXES gnuplot-iostream/ NAMES gnuplot-iostream.h)
add_executable(plot-cpp plot.cpp)
add_executable(test-cpp test.cpp)
add_executable(inout-cpp inout.cpp)
target_link_libraries(plot-cpp ${Boost_LIBRARIES})
if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  find_library(BLITZ_LIBRARY NAMES blitz)
  target_link_libraries(plot-cpp "blitz")
  target_link_libraries(test-cpp "blitz")
  target_link_libraries(inout-cpp "blitz")
endif()
