set(CMAKE_CXX_FLAGS_RELEASE "-std=c++11 -DNDEBUG -Wfatal-errors")
if(CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native") # -ftree-vectorizer-verbose=1")
else()
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -mllvm -vectorize -ffast-math -march=native") # e.g. clang++
endif()
set(CMAKE_CXX_FLAGS_DEBUG   "-std=c++11 -DBZ_DEBUG")

find_package(Boost COMPONENTS iostreams system REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
find_path(GNUPLOT-IOSTREAM_INCLUDE_DIR PATH_SUFFIXES gnuplot-iostream/ NAMES gnuplot-iostream.h)
add_executable(plot-cpp plot.cpp)
if(CMAKE_COMPILER_IS_GNUCXX)
  add_executable(test-cpp-gnucxx test.cpp)
else()
  add_executable(test-cpp-nongnu test.cpp)
endif()
add_executable(inout-cpp inout.cpp)
target_link_libraries(plot-cpp ${Boost_LIBRARIES})
if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  find_library(BLITZ_LIBRARY NAMES blitz)
  target_link_libraries(plot-cpp "blitz")
  target_link_libraries(test-cpp "blitz")
  target_link_libraries(inout-cpp "blitz")
endif()
